@@ -6,7 +6,7 @@ EAPI=5
 
 PYTHON_COMPAT=( python2_7 )
 
-inherit git-2 distutils-r1
+inherit git-2 gnome2-utils distutils-r1
 
 DESCRIPTION="Mail nagger for gnome-shell (port of popper for unity)"
 HOMEPAGE="http://launchpad.net/mailnag"
@@ -29,6 +29,7 @@ RDEPEND="${DEPEND}
 	dev-python/gnome-keyring-python
 	gnome-base/libgnome-keyring[introspection]
 	media-libs/gstreamer[introspection]
+	x11-libs/gdk-pixbuf[introspection]
 	x11-libs/libnotify[introspection]"
 
 DOCS=( README.md NEWS )
@@ -37,4 +38,16 @@ python_install() {
 	distutils-r1_python_install
 	doman data/mailnag-config.1
 	doman data/mailnagd.1
+}
+
+pkg_preinst() {
+	gnome2_icon_savelist
+}
+
+pkg_postinst() {
+	gnome2_icon_cache_update
+}
+
+pkg_postrm() {
+	gnome2_icon_cache_update
 }
