@@ -1,3 +1,6 @@
+  21 Jun 2014; Poncho <poncho@spahan.ch> mailnag-9999.ebuild:
+  mail-client/mailnag: update
+
   02 Jun 2014; Poncho <poncho@spahan.ch> mailnag-9999.ebuild:
   mail-client/mailnag: add man pages
 
